--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
+    "@capacitor/geolocation": "^7.1.5",
+    "@capacitor/network": "^7.0.2",
+    "@capacitor/preferences": "^7.0.2",
     "@tanstack/react-query": "^5.85.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
